--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <h1>SquareWave - Play a square wave every second</h1>
+    <button id="play" class="button play-button">PLAY</button>
+    <button id="stop" class="button stop-button">STOP</button>
+  </div>
   <script src="./index.js"></script>
 </body>
 </html>
