--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en" data-framework="purescript">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link rel="stylesheet" href="./tailwind.css" />
 </head>
 
 <body>
   <div id="app">
-    <h1>SquareWave - Play a square wave every second</h1>
+    <!-- <h1>SquareWave - Play a square wave every second</h1>
     <button id="play" class="button play-button">PLAY</button>
-    <button id="stop" class="button stop-button">STOP</button>
+    <button id="stop" class="button stop-button">STOP</button> -->
   </div>
   <script src="./index.js"></script>
 </body>
